# Cattle

./: .gitignore  CMakeLists.txt  build_script.sh  main.cc  test01.rtl  test03.rtl  test04.rtl  test04.rtl.cpp
Tests/: test01.rtl  test03.rtl  test04.rtl  test05.rtl  test_lambda.rtl  test_lambda_addition.rtl  test_multiassign.rtl  test_rename.rtl  test_speed.rtl  test_tuple_addition.rtl  test_typeinfer.rtl
TypeInformation/: Context.cpp  Context.h  ExpressionOp.cpp  ExpressionOp.h  LambdaTypeInformation.cpp  LambdaTypeInformation.h  TypeInformation.cc  TypeInformation.h  TypeStorage.cc  TypeStorage.h  type.h
exceptions/: ContextException.h  ParameterException.h  ParsingException.h  ScopeException.h  TypeException.h
misc/: StringHelper.h
transpiler/: ExpressionParser.cc  ExpressionParser.h  ExpressionTypeInferenceVisitor.cpp  ExpressionTypeInferenceVisitor.h  FunctionBuilder.cpp  FunctionBuilder.h  MainParser.cpp  MainParser.h  Parser.cpp  Parser.h  ScopeParser.cpp  ScopeParser.h  StateMachineParser.h  StateMachineParserDecorator.h  TypeInferer.cpp  TypeInferer.h
transpiler/ExpressionCombiner/: BasicExpressionCombiner.cpp  BasicExpressionCombiner.h  DefaultExpressionCombiner.cpp  DefaultExpressionCombiner.h  ExpressionCombiner.cpp  ExpressionCombiner.h  ExpressionCombinerFactory.cpp  ExpressionCombinerFactory.h
transpiler/ExpressionGenerators/: BasicExpressionGenerator.cpp  BasicExpressionGenerator.h  DefaultExpressionGenerator.h  DefaultStateExpressionGenerator.h  ExpressionGenerator.h  ExpressionGeneratorFactory.h  LambdaCombiner.cpp  LambdaCombiner.h  TupleCombiner.cpp  TupleCombiner.h
