cmake_minimum_required(VERSION 3.7)
project(Rattle_CPP)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        gen/ASTAdd.cc
        gen/ASTAdd.h
        gen/ASTAnd.cc
        gen/ASTAnd.h
        gen/ASTAnd.h
        gen/ASTArgList.cc
        gen/ASTArgList.h
        gen/ASTAssignment.cc
        gen/ASTAssignment.h
        gen/ASTBlock.cc
        gen/ASTBlock.h
        gen/ASTCharacter.cc
        gen/ASTCharacter.h
        gen/ASTClassDef.cc
        gen/ASTClassDef.h
        gen/ASTCode.cc
        gen/ASTCode.h
        gen/ASTCompEqual.cc
        gen/ASTCompEqual.h
        gen/ASTCompGT.cc
        gen/ASTCompGT.h
        gen/ASTCompGTE.cc
        gen/ASTCompGTE.h
        gen/ASTCompLT.cc
        gen/ASTCompLT.h
        gen/ASTCompLTE.cc
        gen/ASTCompLTE.h
        gen/ASTCompNequal.cc
        gen/ASTCompNequal.h
        gen/ASTDereference.cc
        gen/ASTDereference.h
        gen/ASTDivide.cc
        gen/ASTDivide.h
        gen/ASTEOF.cc
        gen/ASTEOF.h
        gen/ASTExpression.cc
        gen/ASTExpression.h
        gen/ASTFalse.cc
        gen/ASTFalse.h
        gen/ASTFnBody.cc
        gen/ASTFnBody.h
        gen/ASTFnDef.cc
        gen/ASTFnDef.h
        gen/ASTFnInvoke.cc
        gen/ASTFnInvoke.h
        gen/ASTForLoop.cc
        gen/ASTForLoop.h
        gen/ASTIdentifier.cc
        gen/ASTIdentifier.h
        gen/ASTIfStatement.cc
        gen/ASTIfStatement.h
        gen/ASTLambdaDefine.cc
        gen/ASTLambdaDefine.h
        gen/ASTMemDeclaration.cc
        gen/ASTMemDeclaration.h
        gen/ASTMemIdentifier.cc
        gen/ASTMemIdentifier.h
        gen/ASTMemInstantiate.cc
        gen/ASTMemInstantiate.h
        gen/ASTMethodInstantiate.cc
        gen/ASTMethodInstantiate.h
        gen/ASTMethodInvoke.cc
        gen/ASTMethodInvoke.h
        gen/ASTNumber.cc
        gen/ASTNumber.h
        gen/ASTObjCreate.cc
        gen/ASTObjCreate.h
        gen/ASTLambdaPass.cc
        gen/ASTLambdaPass.h
        gen/ASTLambdaIds.cc
        gen/ASTLambdaIds.h
        gen/ASTOr.cc
        gen/ASTOr.h
        gen/ASTParmlist.cc
        gen/ASTParmlist.h
        gen/ASTReturnExpression.cc
        gen/ASTReturnExpression.h
        gen/ASTStatement.cc
        gen/ASTStatement.h
        gen/ASTSubtract.cc
        gen/ASTSubtract.h
        gen/ASTTimes.cc
        gen/ASTTimes.h
        gen/ASTTrue.cc
        gen/ASTTrue.h
        gen/ASTUnaryMinus.cc
        gen/ASTUnaryMinus.h
        gen/ASTUnaryNot.cc
        gen/ASTUnaryNot.h
        gen/ASTUnaryPlus.cc
        gen/ASTUnaryPlus.h
        gen/ASTWhileLoop.cc
        gen/ASTWhileLoop.h
        gen/ASTWrite.cc
        gen/ASTWrite.h
        gen/BaseASTNode.h
        gen/CharStream.cc
        gen/CharStream.h
        gen/ErrorHandler.h
        gen/JavaCC.h
        gen/JJTRattleState.cc
        gen/JJTRattleState.h
        gen/Node.h
        gen/ParseException.cc
        gen/ParseException.h
        gen/Rattle.cc
        gen/Rattle.h
        gen/RattleConstants.h
        gen/RattleTokenManager.cc
        gen/RattleTokenManager.h
        gen/RattleTree.h
        gen/ASTMethodDef.h
        gen/ASTMethodDef.cc
        gen/ASTIndexedExpression.h
        gen/ASTIndexedExpression.cc
        gen/ASTString.cc
        gen/ASTString.h
        gen/ASTTupleDefine.cc
        gen/ASTTupleDefine.h
        gen/RattleTreeConstants.h
        gen/RattleVisitor.h
        gen/SimpleNode.cc
        gen/SimpleNode.h
        gen/Token.cc
        gen/Token.h
        gen/TokenManager.h
        gen/TokenMgrError.cc
        gen/TokenMgrError.h
        transpiler/MainParser.h
        transpiler/ExpressionParser.h
        TypeInformation/TypeInformation.cc
        TypeInformation/TypeInformation.h
        TypeInformation/TypeStorage.cc
        TypeInformation/TypeStorage.h
        TypeInformation/ExpressionOp.h
        TypeInformation/ExpressionOp.cpp
        misc/StringHelper.h
        main.cc transpiler/ExpressionParser.cc transpiler/StateMachineParserDecorator.h transpiler/StateMachineParser.h TypeInformation/type.h transpiler/TypeInferer.cpp transpiler/TypeInferer.h TypeInformation/Context.cpp TypeInformation/Context.h transpiler/ScopeParser.cpp transpiler/ScopeParser.h exceptions/TypeException.h exceptions/ParsingException.h transpiler/MainParser.cpp gen/ASTFnTypeList.cc gen/ASTFnTypeList.h exceptions/ContextException.h exceptions/ScopeException.h transpiler/FunctionBuilder.cpp transpiler/FunctionBuilder.h TypeInformation/LambdaTypeInformation.h TypeInformation/LambdaTypeInformation.cpp transpiler/ExpressionCombiner/DefaultExpressionCombiner.cpp transpiler/ExpressionCombiner/DefaultExpressionCombiner.h transpiler/ExpressionCombiner/ExpressionCombiner.cpp transpiler/ExpressionCombiner/ExpressionCombiner.h transpiler/ExpressionCombiner/ExpressionCombinerFactory.cpp transpiler/ExpressionCombiner/ExpressionCombinerFactory.h)

add_executable(Rattle_CPP ${SOURCE_FILES})